<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.prueba.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_nav_home_to_nav_editor"
            app:destination="@id/nav_editor" />
        <action
            android:id="@+id/action_nav_home_to_nav_ajustes"
            app:destination="@id/nav_ajustes" />
    </fragment>

    <fragment
        android:id="@+id/nav_ajustes"
        android:name="com.example.prueba.ui.ajustes.AjustesFragment"
        android:label="@string/menu_ajustes"
        tools:layout="@layout/fragment_ajustes">
        <action
            android:id="@+id/action_nav_ajustes_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_editor"
        android:label="@string/menu_editor"
        tools:layout="@layout/activity_editor">
        <action
            android:id="@+id/action_nav_editor_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>
</navigation>